<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- A -->
    <string name="app_name">CarrosWS</string>
    <string name="action_save">Salvar</string>

    <string name="action_about">Sobre</string>
    <string name="action_site">Site</string>
    <string name="about_dialog_text">
    <![CDATA[
        <b>Carros 2015</b><br>
        Versao %s<br><br>
        <a href="http://www.livrowebservices.com.br/index.html">http://livrowebservices.com.br</a><br><br>
        <a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
        <a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
        <a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
    ]]>
    </string>
    <string name="about_dialog_title">Livro Android</string>
    <string name="action_done">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Busca</string>
    <string name="action_refresh">Refresh</string>

    <!-- C -->
    <string name="classico">Clássico</string>
    <string name="classicos">Clássicos</string>
    <string name="carros">Carros</string>
    <string name="configuracoes">Configurações</string>

    <!-- d -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivo">Esportivo</string>
    <string name="esportivos">Esportivos</string>

    <!-- F -->
    <string name="favoritos">Favoritos</string>
    <string name="foto">Foto</string>

    <!-- H -->
    <string name="hello_world">Hello world!</string>

    <!-- L -->
    <string name="latitudeLongitude">Latitude / Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="luxo">Luxo</string>

    <!-- M -->
    <string name="mapa">Mapa</string>
    <string name="msg_error_conexao_indisponivel">Conexão indisponível</string>
    <string name="msg_carro_sem_video">Carro sem vídeo cadastrado</string>
    <string name="msg_url_invalida">URL de vídeo inválida</string>
    <string name="msg_error_io">Ocorreu algum erro ao buscar os dados.</string>
    <string name="msg_erro_io_timeout">Erro de timeout na consulta.</string>
    <string name="msg_error_campo_obrigatorio">Campo obrigatório.</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>

    <!-- N -->
    <string name="nav_drawer_username">Ricardo Lecheta</string>
    <string name="nav_drawer_email">rlecheta@gmail.com</string>
    <string name="novo_carro">Novo Carro</string>
    <string name="nome">Nome</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="sobre">Sobre</string>
    <string name="site_livro_webservice">http://www.livrowebservices.com.br/index.html</string>

    <!-- T -->
    <string name="todo">TODO</string>
    <string name="tipo">Tipo</string>
    <string name="title_activity_carro_edit">CarroEditActivity</string>
    <string name="title_activity_planeta">Planeta</string>
    <string name="transition_key">img_transition_key</string>

    <!-- U -->
    <string name="url_video">URL Vídeo</string>

    <!-- V -->
    <string name="video">Vídeo</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todos">Todos</string>

</resources>
