<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Desc -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/descricao" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tUrlVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/url_video" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Lat/Lng -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tLat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/latitude"
                    android:singleLine="true"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tLng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/longitude"
                    android:singleLine="true"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
